# Gradient-Descent

./: CMakeLists.txt  README.md  bindings.cpp  main.cpp  pyproject.toml  setup.py
src/autodiff/: main.cpp
src/autodiff/operation/: Operation.h
src/autodiff/operation/arithmetic/: AddOperation.cpp  DivideOperation.cpp  MultiplyOperation.cpp  NegativeOperation.cpp  SubtractOperation.cpp
src/autodiff/operation/expolog/: ExponentialOperation.cpp  LogarithmOperation.cpp  PowerOperation.cpp
src/autodiff/operation/hyperbolic/: TanhOperation.cpp
src/autodiff/operation/trigonometric/: CosineOperation.cpp  SineOperation.cpp
src/autodiff/operation/unary/: NegativeOperation.cpp
src/autodiff/variable/: Variable.cpp  Variable.h
src/loss/: LossFunction.h
src/loss/mse/: MSE.h
src/math/matrix/: Matrix.cpp  Matrix.h
src/math/vector/: Vector.cpp  Vector.h
src/notebooks/: README.md  amazon_stock.ipynb  autodiff.ipynb  bindings.cpp  example.ipynb  gradientdescent.ipynb  setup.py  student_performance.ipynb  tutorial.ipynb
src/notebooks/autodiff/: README.md  autodiff.ipynb  setup.py
src/optimizers/: GradientDescent.h
src/optimizers/vanilla/: Vanilla.cpp  Vanilla.h
test/: test_dummy.cpp
